hphp/test/slow/nullsafe/nullsafe-prop-13.php
<?hh // strict

function byRef(inout $x) :mixed{}

function test() :mixed{
  $x = null;
  byRef(inout $x?->y); // error
}
